[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.0",
    "apscheduler>=3.11.0",
    "pillow>=11.3.0",
    "pymongo>=4.15.2",
    "pyrogram>=2.0.106",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "tgcrypto>=1.2.5",
]
